<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">tagstore</string>
    <string name="edit_text_field"></string>
    <string name="tag_accept">Tag!</string>
    <string name="file_name">File name:</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="no_data">No data</string>
    <string name="select">Select</string>
    <string name="done">Done</string>
    <string name="synchronization_state">Synchronization State:</string>
    <string name="last_synchronization">Last Synchronization:</string>
    <string name="unknown">Unknown</string>
    <string name="synchronize">Synchronize</string>
    <string name="icon_list_view">Icon List View</string>
    <string name="num_rows">Number of Rows:</string>
    <string name="num_columns">Number of colums</string>
    <string name="reset_factory_settings">Reset factory settings:</string>
    <string name="reset">Reset</string>
    <string name="reset_factory_setting">By hitting reset button, the database will remove stored tags / settings. No other files will be modified</string>
    <string name="string_back">Back</string>
    <string name="enable_notification_string">Enable status bar notification</string>
    <string name="enable_notification_description">When enabled, tagstore displays a status bar notification when a new file arrives in one of the observed folders.</string>
    <string name="tagstore_directories">Folders</string>
    <string name="sync_tagstore">Sync</string>
    <string name="about_tagstore">About</string>
    <string name="notification_settings">Notification</string>
    <string name="listview_settings">List View</string>
    <string name="database_options">Database</string>
    <string name="directory_present">Folder is already in list!</string>
    <string name="one_tag_minimum">There must be at least one tag for the file</string>
    <string name="bytes">Bytes</string>
    <string name="format_delete">The file %s was deleted.</string>
    <string name="error_format_delete">Failed to delete file %s.</string>
    <string name="error_format_add_file">Failed to add %s to tagstore!</string>
    <string name="error_format_file_removed">File %s  no longer exists.</string>
    <string name="options">Options</string>
    <string name="details">Details</string>
    <string name="send">Send</string>
    <string name="delete">Delete</string>
    <string name="add_directory">Add folder...</string>
    <string name="no_update">No updates found!</string>
    <string name="cloud_view">Cloud View</string>
    <string name="sort_mode">Sort mode</string>
    <string name="sort_mode_alphabetic">alphabetic</string>
    <string name="sort_mode_popular">popular</string>
    <string name="configuration">Configuration</string>
    <string name="new_file">New File</string>
    <string name="reset_database">Restored to factory settings</string>
    <string name="error_reset_database">Failed to restore factory settings!</string>
    <string name="status_bar">Click on file to handle event</string>
    <string name="error_media_not_mounted">The SD card is currently ejected or in use by USB</string>
    <string name="reserved_character_tag">The character is reserved for a tag!</string>
    <string name="reserved_keyword">At least one tag is a reserved keyword!</string>
    <string name="choose_one">Choose one:</string>
    <string name="ignore">Ignore</string>
    <string name="rename">Rename</string>
    <string name="help_file_options">Help: ignore means that the file stays on the disk but it is excluded from the tagstore</string>
    <string name="old_tags">Old tags:</string>
    <string name="error_no_file_name">No file name entered!</string>
    <string name="error_same_file_name">The new file name is the same as the old file name</string>
    <string name="error_file_name_not_unique">Another file with that name already exists in the tagstore</string>
    <string name="error_file_name_present">A file with that name already exists</string>
    <string name="error_failed_rename">Failed to rename</string>
    <string name="tag_me">Tag me!</string>
    <string name="old_file_name">Old file name:</string>
    <string name="reserved_character_file_name">The character is reserved for a file name</string>
    <string name="reserved_keyword_file_name">The entered file name is a reserved keyword</string>
    <string name="retag">Retag</string>
    <string name="hashsum">Hash sum:</string>
    <string name="file_type">Type:</string>
    <string name="file_size">Size:</string>
    <string name="error_tag_exists">The tag already exists!</string>
    <string name="error_one_tag_maximum">Can´t rename tag to multiple tags!</string>
    <string name="tag_name">Name of tag:</string>
    <string name="tag_files">Num. of files:</string>
    <string name="tag_link">Num. of linked tags:</string>
    <string name="file_date">Date:</string>
    <string name="select_directory">Select a folder in which to copy the file</string>
    <string name="error_wrong_action">Error: wrong action</string>
    <string name="error_no_directories">Please define observed folders first in the tagstore!</string>
    <string name="error_failed_retrieve_parameters">Failed to retrieve parameters</string>
    <string name="error_file_target_directory">A file with that name is already present in that folder!</string>
    <string name="error_file_removed">The file has been deleted</string>
    <string name="error_failed_share">Failed to share file</string>
    <string name="share_success">Successfully shared file</string>
    <string name="storage_directory">storage</string>
    <string name="error_tagstore_directory">The tagstore storage folder is unremovable</string>
    <string name="file_present_tagstore">The file is already included in the tagstore</string>
    <string name="file_present_tagstore_not_tagged">The file is already included in the tagstore but has not yet been tagged</string>
    <string name="no_app_registered">No application registered to handle file %s</string>
    <string name="directory_preference_summary">Choose the folders to be watched and organised by tagstore.</string>
    <string name="display_preference_summary">Choose the display preference how the tagstore should be visualized.</string>
    <string name="database_preference_summary">This preference allows you to reset the tagstore database. All settings and tags are removed.</string>
    <string name="database_reset_question">Do you want to reset the tagstore to the default?</string>
    <string name="sort_mode_preference_summary">This preference lets you choose how the tags in the icon view mode are sorted.</string>
    <string name="item_row_preference_summary">This preference lets you choose how many columns in the icon view are displayed.</string>
    <string name="text">Text</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="image">Image</string>        
    <string name="open_as">Open with</string>
    <string name="controlled_vocabulary_preference">Controlled Vocabulary</string>
    <string name="controlled_vocabulary_summary">When this preference is activated, only tags from the controlled vocabulary are used.</string>
    <string name="tag_not_in_controlled_vocabulary">The tag is not contained in the controlled vocabulary</string>
    <string name="error_vocabulary_file_not_exists">The vocabulary file does not exist</string>
    <string name="synchronization_settings">Synchronization</string>    
    <string name="synchronization_type_preference_summary">This preference lets you choose the preferred synchronization method.</string>
    <string name="synchronization_settings_dropbox">Dropbox Settings</string>
    <string name="synchronization_settings_dropbox_summary">This preference lets you customize the Dropbox Synchronization Settings.</string>
    <string name="authenticate">Authenticate</string>
    <string name="unlink">Unlink</string>
    <string name="select_tagstore">Select tagstore</string>
    <string name="enumerate_tagstores">Enumerating tagstores&#8230;</string>
    <string name="no_tagstores_found">No tagstores were found. Please create a tagstore in the Dropbox folder App/tagstore first!</string>
    <string name="error_failed_configure_tagstore">Error: failed to configure synchronization tagstore</string>
    <string name="analyize_store_tag_file">Analyzing stores&#8230;</string>
    <string name="error_failed_connect">Error: failed to connect!</string>
    <string name="synchronize_tagstores">Synchronizing tagstores&#8230;</string>
    <string name="progress">Progress:</string>
    <string name="status">Status:</string>
    <string name="downloading">Downloading</string>
    <string name="uploading">Uploading </string>
    <string name="error_upload_file">Error: failed to upload file </string>
    <string name="error_download_file">Error: failed to download file </string>
    <string name="updating_stores">Updating stores&#8230;</string>
    <string name="sync_completed">Synchronization completed on "</string>
    <string name="sync_active">Another sync is currently active. Please try later!</string>
    <string name="conflict_dialog_msg_format" formatted="false">Do you want to replace the file %s from store %s with file %s from store %s \?</string>
    <string name="synchronization_settings_smb">SMB Settings</string>
    <string name="synchronization_settings_smb_summary">This preference lets you customize the SMB Synchronization Settings.</string>
    <string name="user_name">User:</string>
    <string name="password">Pwd:</string>
    <string name="server">Server:</string>
    <string name="share">Share:</string>
    <string name="connect">Connect</string>
    <string name="error_no_user_name">Please set a user name first!</string>
    <string name="error_no_password">Please set a password first!</string>
    <string name="error_no_server">Please set the server first!</string>
    <string name="error_no_share">Please set the share first!</string>
    <string name="connect_success">Connected successfully!</string>
    <string name="smb_configuration">SMB Configuration</string>
</resources>