<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:stretchColumns="1"

	android:layout_width="fill_parent" android:layout_height="fill_parent">

	<TableRow>

		<TextView android:id="@+id/tag_name_label" 
				  android:layout_width="wrap_content"
				  android:textColor="#FFF" 
				  android:text="@string/tag_name"/>

		<TextView android:id="@+id/tag_name_value" 
				  android:paddingLeft="30dp"
				  android:text="tag_name"
				  android:textColor="#FFF" />
	</TableRow>
	
	<TableRow>
		<TextView android:id="@+id/tag_files_label" 
			      android:textColor="#FFF" 
			      android:text="@string/tag_files" />

		<TextView android:id="@+id/tag_files_value" 
				  android:paddingLeft="30dp"
				  android:text="0"
			      android:textColor="#FFF" />
	</TableRow>
	<TableRow>
		<TextView android:id="@+id/tag_link_label"
				  android:textColor="#FFF" 
				  android:text="@string/tag_link"/>
				  
		<TextView android:text="0" 
				  android:paddingLeft="30dp"		
				  android:id="@+id/tag_link_value"
				  android:textColor="#FFF" />
	</TableRow>
</TableLayout>
