<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<TextView android:id="@+id/user_name_label" 
				  android:layout_width="wrap_content"
				  android:layout_height="50dip"
				  android:textColor="#FFF" 				  
				  android:layout_alignParentLeft="true"
				  android:layout_alignParentTop="true"
				  android:paddingLeft="5dip"
				  android:paddingTop="5dip"
				  android:text="@string/user_name"/> 
				     
	<EditText android:id="@+id/user_name_value" 
				  android:layout_width="fill_parent"
				  android:layout_height="50dip"				  
				  android:layout_alignParentTop="true"
				  android:paddingLeft="5dip"
				  android:layout_toRightOf="@+id/user_name_label"
				  android:layout_alignLeft="@+id/server_value"				  
				  android:paddingTop="5dip"
				  android:text="123"/>    
	
	<TextView android:id="@+id/password_label" 
				  android:layout_width="wrap_content"
				  android:layout_height="50dip"
				  android:textColor="#FFF" 
				  android:layout_alignParentLeft="true"
				  android:layout_below="@+id/user_name_label"
				  android:paddingLeft="5dip"
				  android:paddingTop="5dip"
				  android:text="@string/password"/> 	
	
	<EditText android:id="@+id/password_value" 
				  android:layout_width="fill_parent"
				  android:layout_height="50dip"				  
				  android:layout_below="@+id/user_name_value"
				  android:paddingLeft="5dip"
				  android:layout_toRightOf="@+id/user_name_label"
				  android:layout_alignLeft="@+id/server_value"				  
				  android:paddingTop="5dip"
				  android:password="true"
				  android:text="123"/>    	
	
	
	<TextView android:id="@+id/server_label" 
				  android:layout_width="wrap_content"
				  android:layout_height="50dip"
				  android:textColor="#FFF" 				  
				  android:layout_alignParentLeft="true"
				  android:layout_below="@+id/password_label"
				  android:paddingLeft="5dip"
				  android:paddingTop="5dip"
				  android:text="@string/server"/> 

	<EditText android:id="@+id/server_value" 
				  android:layout_width="fill_parent"
				  android:layout_height="50dip"				  
				  android:layout_below="@+id/password_value"
				  android:paddingLeft="5dip"
				  android:layout_toRightOf="@+id/server_label"
				  android:paddingTop="5dip"
				  android:text="123"/>  
				  
	<TextView android:id="@+id/share_label" 
				  android:layout_width="wrap_content"
				  android:layout_height="50dip"
				  android:textColor="#FFF" 
				  android:layout_alignParentLeft="true"
				  android:layout_below="@+id/server_label"
				  android:paddingLeft="5dip"
				  android:paddingTop="5dip"
				  android:text="@string/share"/> 	
				  
	<EditText android:id="@+id/share_value" 
				  android:layout_width="fill_parent"
				  android:layout_height="50dip"				  
				  android:layout_below="@+id/server_value"
				  android:paddingLeft="5dip"
				  android:layout_alignLeft="@+id/server_value"
				  android:layout_toRightOf="@+id/share_label"
				  android:paddingTop="5dip"
				  android:text="123"/>  	

     <Button android:layout_height="50dip"
             android:layout_width="wrap_content" 
             android:layout_marginRight="10dip"
             android:paddingLeft="10dip"
             android:paddingRight="10dip"
             android:paddingTop="10dip"      
		     android:layout_below="@+id/share_value"                    
             android:background="@drawable/buttonshape"
             android:layout_alignParentLeft="true"
             android:id="@+id/button_connect" 
             android:text="@string/connect">
     </Button>
     
     <Button android:layout_height="50dip"
             android:layout_width="wrap_content"
             android:paddingLeft="10dip"
             android:paddingRight="10dip"
             android:paddingTop="10dip"   
             android:background="@drawable/buttonshape"
             android:id="@+id/button_cancel" 
		     android:layout_below="@+id/share_value"
			 android:layout_alignParentRight="true"           
             android:text="@string/cancel"></Button>	
				
    
</RelativeLayout>    